--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>SD Web 2 Assignment 1</title>
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="main.css" >
     <script src="index.js"></script>
   </head>
   <div>
