--- a/index.html
+++ b/index.html
@@ -7,93 +7,94 @@
     <link rel="stylesheet" href="main.css" >
     <script src="index.js"></script>
   </head>
-  <div>
-    <div>
-      <h1>SAIT Software Developer Program Web 2 Assignment 1</h1>
-      <p>
-        Complete the JavaScript exercises below. Check the console for output
-        and fill in the results on this page.
-      </p>
-    </div>
 
-    <main>
-      <section id="exercise-1">
-        <h2>Exercise 1: Print Character Names</h2>
-        <p>Print out the names of each character in the console.</p>
-        <div class="output">
-          <h3>Results:</h3>
-          <ul id="names-list">
-            <!-- Character names will be populated here -->
-          </ul>
-        </div>
-      </section>
-
-      <section id="exercise-2">
-        <h2>Exercise 2: Filter by Age</h2>
-        <p>Print out the names of characters whose age is less than 40.</p>
-        <div class="output">
-          <h3>Results:</h3>
-          <ul id="young-characters-list">
-            <!-- Filtered character names will be populated here -->
-          </ul>
-        </div>
-      </section>
-
-      <section id="exercise-3">
-        <h2>Exercise 3: Reusable Function for Lists</h2>
+  <body>
+      <header>
+        <h1>SAIT Software Developer Program Web 2 Assignment 1</h1>
         <p>
-          Create a function that takes any array and renders a list of character
-          names on the page.
+          Complete the JavaScript exercises below. Check the console for output
+          and fill in the results on this page.
         </p>
-        <div class="output">
-          <h3>Results:</h3>
-          <ul id="function-list">
-            <!-- Function-generated list will be populated here -->
-          </ul>
-        </div>
-      </section>
+      </header>
 
-      <section id="exercise-4">
-        <h2>Exercise 4: Age Filter Function</h2>
-        <p>
-          Create a function that takes an array and an age threshold, then
-          displays characters below that age.
-        </p>
-        <div class="output">
-          <h3>Results:</h3>
-          <ul id="age-filter-list">
-            <!-- Age-filtered results will be populated here -->
-          </ul>
-        </div>
-      </section>
-
-      <section id="exercise-5">
-        <h2>Exercise 5: Error Handling</h2>
-        <p>Add error handling to check if objects have a "name" property.</p>
-        <div class="output">
-          <h3>Results:</h3>
-          <ul id="error-handling-list">
-            <!-- Error-handled results will be populated here -->
-          </ul>
-          <div id="error-messages">
-            <!-- Error messages will be displayed here -->
+      <main>
+        <section id="exercise-1">
+          <h2>Exercise 1: Print Character Names</h2>
+          <p>Print out the names of each character in the console.</p>
+          <div class="output">
+            <h3>Results:</h3>
+            <ul id="names-list">
+              <!-- Character names will be populated here -->
+            </ul>
           </div>
-        </div>
-      </section>
+        </section>
 
-      <section id="exercise-6">
-        <h2>Exercise 6: Test Error Handling</h2>
-        <p>Test your error handling by using a broken array.</p>
-        <div class="output">
-          <h3>Results:</h3>
-          <ul id="broken-array-list">
-            <!-- Broken array test results will be populated here -->
-          </ul>
-          <div id="broken-array-errors">
-            <!-- Error messages from broken array will be displayed here -->
+        <section id="exercise-2">
+          <h2>Exercise 2: Filter by Age</h2>
+          <p>Print out the names of characters whose age is less than 40.</p>
+          <div class="output">
+            <h3>Results:</h3>
+            <ul id="young-characters-list">
+              <!-- Filtered character names will be populated here -->
+            </ul>
           </div>
-        </div>
-      </section>
-    </main>
-  </div>
+        </section>
+
+        <section id="exercise-3">
+          <h2>Exercise 3: Reusable Function for Lists</h2>
+          <p>
+            Create a function that takes any array and renders a list of character
+            names on the page.
+          </p>
+          <div class="output">
+            <h3>Results:</h3>
+            <ul id="function-list">
+              <!-- Function-generated list will be populated here -->
+            </ul>
+          </div>
+        </section>
+
+        <section id="exercise-4">
+          <h2>Exercise 4: Age Filter Function</h2>
+          <p>
+            Create a function that takes an array and an age threshold, then
+            displays characters below that age.
+          </p>
+          <div class="output">
+            <h3>Results:</h3>
+            <ul id="age-filter-list">
+              <!-- Age-filtered results will be populated here -->
+            </ul>
+          </div>
+        </section>
+
+        <section id="exercise-5">
+          <h2>Exercise 5: Error Handling</h2>
+          <p>Add error handling to check if objects have a "name" property.</p>
+          <div class="output">
+            <h3>Results:</h3>
+            <ul id="error-handling-list">
+              <!-- Error-handled results will be populated here -->
+            </ul>
+            <div id="error-messages">
+              <!-- Error messages will be displayed here -->
+            </div>
+          </div>
+        </section>
+
+        <section id="exercise-6">
+          <h2>Exercise 6: Test Error Handling</h2>
+          <p>Test your error handling by using a broken array.</p>
+          <div class="output">
+            <h3>Results:</h3>
+            <ul id="broken-array-list">
+              <!-- Broken array test results will be populated here -->
+            </ul>
+            <div id="broken-array-errors">
+              <!-- Error messages from broken array will be displayed here -->
+            </div>
+          </div>
+        </section>
+      </main>
+  </body>
 </html>
